--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 .env.*          # .env.dev, .env.prod и т.п.
 *.env
 
+screenshots/
+
 # Python: кэш и временные файлы
 __pycache__/
 **/__pycache__/
