--- a/.env_sample
+++ b/.env_sample
@@ -1,3 +1,7 @@
+EMAIL=
+PASSWORD=
+BASE_URL_PRO=https://ssa.tophotels.pro/
+
 BASE_URL_TH=https://tophotels.ru/en/
 
 OUTPUT_FILE_COUNTER_REVIEW=hotel_questions.xlsx
@@ -13,7 +17,4 @@ MAX_FIRST_RUN=1
 
 PATH_FOR_REPORTS=
 
-# for dev
-EMAIL=
-PASSWORD=
-BASE_URL_PRO=https://tophotels.pro/
+CONCURRENCY=4
