create new script for collect ids

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ auth_state.json
 /screenshots/
 *reports*/
 ids.txt
+picked_hotel_ids.txt
 # Python: кэш и временные файлы
 __pycache__/
 **/__pycache__/
